@@ -1,6 +1,7 @@
 Contributed by AdmiringWorm
 * The Book of Unwritten Tales - Added Settings path
 * Euro Truck Simulator 2
+* Omerta: City of Gangsters
 Games to look into: DiRT, The PATH
 =1/5/2013=
 * Atlantis: The Lost Tales
